--- a/estilos.scss
+++ b/estilos.scss
@@ -11,3 +11,8 @@
     background-size: cover;
     object-fit: contain;
 }
+footer{
+    background-color: rgb(23, 23, 121);
+    height: 15rem;
+    color: white;
+}
